# Gatherraa

./: .gitignore  API_DOCUMENTATION.md  COMPONENT_IMPLEMENTATION.md  COMPONENT_IMPLEMENTATION_SUMMARY.md  CROSS_CHAIN_PR.md  DEPLOYMENT_GUIDE.md  FEATURE_FLAGS_EXAMPLES.md  FEATURE_FLAGS_README.md  MULTI_SOURCE_DATA_AGGREGATOR_IMPLEMENTATION.md  PR_DESCRIPTION.md  PR_TEMPLATE.md  README.md  TODO.md  package-lock.json
.githooks/: pre-commit
.github/workflows/: ci.yml
app/backend/: .env.example  ERROR_HANDLING_GUIDE.md  STATE_MACHINE_DOCUMENTATION.md  STATE_MACHINE_QUICK_REFERENCE.md  STATE_MACHINE_VISUAL_GUIDE.md  TASK1_COMPLETE.md  TASK1_STATE_TRANSITION_SUMMARY.md  (+5 more)
contract/: .env.example  CONFLICTS_RESOLVED.md  Cargo.toml  DEPENDENCY_OPTIMIZATION.md  MODULE_ORGANIZATION_PLAN.md  MODULE_ORGANIZATION_SUMMARY.md  PR_CONTENT.md  PR_DESCRIPTION.md  PR_SUMMARY.md  README.md  README_REORGANIZED.md  cargo_tree_gathera-common_features.txt  common_errors_new.txt  common_errors_new_utf8.txt  compile_error.txt  contracts_errors.txt  contracts_errors_2.txt  contracts_errors_2_utf8.txt  contracts_errors_utf8.txt  errors_new_utf8.txt  escrow_errors.txt  escrow_errors_2.txt  escrow_errors_2_utf8.txt  escrow_errors_utf8.txt  escrow_tree.txt  gathera_common_tree.txt  hardhat.config.ts  package.json
contract/common/: Cargo.toml  README.md
contract/common/src/: access.rs  error.rs  interfaces.rs  lib.rs  reentrancy.rs  storage.rs  upgrade.rs  validation.rs
contract/common/traits/: auth.rs  mod.rs  storage.rs  validation.rs
contract/config/: chains.json
contract/contracts/: Cargo.toml
contract/contracts/src/: chain_abstraction.rs  contract.rs  cross_chain.rs  lib.rs  storage.rs  types.rs
contract/core/: README.md
contract/core/access_control/: Cargo.toml
contract/cross_contract_contract/: README.md
contract/cross_contract_contract/src/: lib.rs
contract/docs/: cross-chain-deployment-guide.md
contract/dutch_auction_contract/: Cargo.toml  README.md
contract/dutch_auction_contract/src/: lib.rs
contract/escrow_contract/: Cargo.toml  README.md
contract/escrow_contract/src/: lib.rs  proxy.rs  storage_types.rs
contract/event_factory_contract/src/: lib.rs  storage_types.rs
contract/events/: README.md
contract/events/ticket/: Cargo.toml  lib.rs  storage_types.rs
contract/feature_flag_contract/src/: lib.rs  storage_types.rs
contract/financial/: README.md
contract/financial/staking/contracts/: Cargo.toml
contract/gas_baselines/: README.md  cross_contract_complex_workflow.json  cross_contract_create_tier_and_escrow.json  cross_contract_mint_tickets_and_referral_escrow.json  escrow_create.json  escrow_create_dispute.json  escrow_create_large_milestones.json  escrow_create_small_milestones.json  escrow_create_with_referral.json  escrow_initialize.json  escrow_lock.json  escrow_release.json  escrow_resolve_dispute.json  ticket_add_tier.json  ticket_balance_query.json  ticket_batch_mint.json  ticket_batch_mint_1.json  ticket_batch_mint_10.json  ticket_batch_mint_100.json  ticket_get_price.json  ticket_initialize.json  ticket_metadata_query.json
contract/governance/: README.md
contract/governance_contract/src/: lib.rs  storage.rs
contract/identity/: README.md
contract/identity_contract/: Cargo.toml
contract/identity_contract/src/: lib.rs  storage_types.rs
contract/iteration_optimization_contract/src/: lib.rs  storage_types.rs
contract/multisig_wallet_contract/: Cargo.toml  README.md
contract/multisig_wallet_contract/src/: lib.rs  security_tests.rs  storage_types.rs
contract/scripts/: deploy-cross-chain.ts  test-cross-chain.ts
contract/storage_optimization_contract/src/: lib.rs  storage_types.rs
contract/subscription_contract/src/: lib.rs  storage_types.rs
contract/test/: Cargo.toml
contract/test/src/: gas_regression.rs
contract/ticket_contract/: Cargo.toml  README.md
contract/ticket_contract/src/: lib.rs  oracle.rs  storage_types.rs  test.rs
contract/utilities/: README.md
contract/utilities/optimization/: Cargo.toml
contract/utilities/optimization/storage_initialization_contract/: Cargo.toml
contract/vrf_contract/src/: lib.rs  storage_types.rs
contract/zk_ticket_contract/: README.md
contract/zk_ticket_contract/src/: lib.rs  storage_types.rs
docs/: MACHINE_VISION_IMPLEMENTATION_SUMMARY.md  MACHINE_VISION_ORDER_BOOK_OPERATIONAL_GUIDE.md  VERIFICATION_GUIDE.md  architecture.md  events.md
monitoring/: anomaly-detection-alert-rules.yml
scripts/: deploy_contracts.sh  gas_regression_check.js  profile_gas.sh  verify_contracts.sh
(+244 files in other folders)
