[package]
name = "gathera-common"
version.workspace = true
edition.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib"]


[dependencies]
# Common crate uses Soroban core types (Addr/Symbol/Env/String). Keep features minimal.
soroban-sdk = { workspace = true, default-features = false }






# NOTE: Intentionally no dev-dependencies in this crate.
# The workspace builds `wasm32-unknown-unknown` for downstream contracts.
# Pulling Soroban `testutils` via dev-dependencies can re-enable conflicting lang items
# (e.g. `panic_impl`) in the same compilation unit.




