[package]
name = "gathera-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
gathera-common = { workspace = true }
ticket-contract = { workspace = true }
escrow-contract = { workspace = true }
multisig-wallet-contract = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
