[package]
name = "escrow_contract"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Secure escrow contract for event payments with revenue splitting"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, default-features = false }
gathera-common = { workspace = true }


