[package]
name = "multisig_wallet_contract"
version = "0.1.0"
edition = "2021"
description = "Multi-signature wallet contract for event treasury management"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, default-features = false }









[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1
